1.9.1: Complete Equipment Attribute Listener
- Equipment Attribute update events: on join, on inventory click (shift and other), swap hand, on interact, on dispense, on break, on death